src/test/testFiles/invalid/semanticErrors/missingReturnInFunction.manimdsl
def func2(number x): number {
    let z: number = x + 1;
}

let z = func2(5);